--- a/css/app.css
+++ b/css/app.css
@@ -118,11 +118,18 @@ h1{
   font-size: 0.8em;
 }
 
+.date-spettacoli {
+  font-size: 0.8em;
+  padding-top: 1em;
+  padding-bottom: 2em;
+}
+
 .date-spettacoli p {
   margin-bottom: 0;
 }
 
 #parlano-di-noi {
+  margin-top: 4em;
   padding-top: 1em;
   padding-bottom: 1em;
 }
@@ -133,4 +140,25 @@ h1{
 
 #top-bar {
   height: 0 !important;
+}
+
+#mail {
+  padding-right: 1em;
+}
+
+.center-social {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+/* Small only */
+@media screen and (max-width: 39.9375em) {
+  h1{
+    font-size: 2em;
+  }
+  .newest_size {
+    font-size: 1.2em;
+  }
 }
